# Blast_Radius

./: .blastradius.toml.example  .env.example  .gitignore  00_README_START_HERE.md  01_PRODUCT_SPEC.md  02_CODEX_PLAYBOOK.md  03_SCHEDULE.md  04_PITCH_AND_VIDEO.md  05_JUDGE_DOSSIER.md  06_DEVPOST_SUBMISSION.md  16_DEVPOST_FINAL_COPY.md  ACTION_RELEASE.md  AGENTS.md  DEMO_REDFLAG.txt  LICENSE  README.md  action.yml  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/verify-scenario/: SKILL.md
.agents/skills/verify-scenario/scripts/: verify_scenarios.py
.github/workflows/: blast-radius-screen.yml  ci.yml
assets/: SCREENSHOT_CAPTURE.md
blast_radius/: __init__.py  api.py  audit.py  auth.py  cli.py  config.py  main.py  mcp_server.py  models.py  storage.py
blast_radius/data/: detection_corpus.jsonl  detection_eval_baseline.json  learn.json  model_eval_baseline.json  questions.json  scenarios.json  templates.json  toolkit.json
blast_radius/engine/: AGENTS.md  __init__.py  bank.py  custom_rules.py  gate.py  grader.py  inspector.py  openai_adapter.py  service.py
blast_radius/eval/: __init__.py  detection_eval.py  inspector_fuzz.py  model_eval.py
blast_radius/integrations/: __init__.py  codex_hook.py
blast_radius/static/: AGENTS.md  access.css  app.js  author.css  author.js  guardrails.js  history.js  improvements.css  integrity-check.js  pet.css  pet.js  resources.js  results-summary.js  screen.css  screen.js  styles.css  team.css  team.js  verdict-label.js
blast_radius/templates/: access.html  author.html  index.html  screen.html  team.html
deploy/: Caddyfile  README.md  blast-radius.service  deploy.sh  update_env.py
docs/: README.md  index.html
evidence/: live_grade_resp_024208198fc0ff3c016a5cbcdbd3708192887a3ae615e727a1.json  live_grade_resp_038928ae2a9f40c0016a5b67c9d4008197a2349a2d7aa43ecb.json  live_grade_resp_0990b342aa6152f1016a592698815881a09736626b9f1b4593.json
integrations/codex/: README.md  hooks.json
judge/: ORCHESTRATOR.md  RUBRIC.md
judge/reviews/: 000-baseline-2026-07-13.md
plugins/blast-radius/: .mcp.json  README.md
plugins/blast-radius/.codex-plugin/: plugin.json
plugins/blast-radius/scripts/: preflight.py
plugins/blast-radius/skills/screen-agent-artifacts/: SKILL.md
research/: 01_rules_tech_winners_landscape.json  02_judge_sentiment.json  03_edugame_pivot_blastradius.json
scripts/: action_summary.py  action_verify.sh  capture_live_grade.py  check_evidence_links.py  submission_preflight.py
tests/: conftest.py  test_action.py  test_api.py  test_audit.py  test_auth.py  test_bank.py  test_capture_live_grade.py  test_cli.py  test_codex_hook.py  test_custom_rules.py  test_deploy.py  test_detection_eval.py  test_drill.py  test_frontend.py  test_gate.py  test_gate_adversarial_corpus.py  test_grader.py  test_inspector.py  test_inspector_fuzz.py  test_mcp_server.py  test_model_eval.py  test_models.py  test_openai_schema.py  test_plugin.py  test_service.py  test_storage.py  test_submission_preflight.py  test_tools_api.py
