[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blast-radius"
version = "0.1.0"
description = "A verification game for safely operating AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "openai>=1.99,<3",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.1,<2",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["blast_radius"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

