[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blast-radius"
version = "0.1.0"
description = "A verification game for safely operating AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lockelamoree" }]
keywords = ["agent-security", "guardrail", "mcp", "sandbox"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "openai>=1.99,<3",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.1,<2",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
blastradius = "blast_radius.cli:main"
blastradius-mcp = "blast_radius.mcp_server:main"
blastradius-supervise = "blast_radius.integrations.codex_hook:main"

[project.optional-dependencies]
mcp = ["mcp>=1.2,<2"]
dev = [
  "build>=1.2,<2",
  "httpx>=0.28,<1",
  "mcp>=1.2,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/Lockelamoree/Blast_Radius"
Repository = "https://github.com/Lockelamoree/Blast_Radius"
Issues = "https://github.com/Lockelamoree/Blast_Radius/issues"

[tool.hatch.build.targets.wheel]
packages = ["blast_radius"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
